; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ahci/extr_ahci_pci.c_ahci_pci_resume.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ahci/extr_ahci_pci.c_ahci_pci_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ahci_pci_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ahci_pci_resume(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @ahci_pci_ctlr_reset(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* %4, align 4
  store i32 %9, i32* %2, align 4
  br label %15

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @ahci_ctlr_setup(i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @bus_generic_resume(i32 %13)
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %10, %8
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @ahci_pci_ctlr_reset(i32) #1

declare dso_local i32 @ahci_ctlr_setup(i32) #1

declare dso_local i32 @bus_generic_resume(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
